Removed hover effects on mobile to prevent bugs

--- a/src/sass/_content.scss
+++ b/src/sass/_content.scss
@@ -54,8 +54,10 @@
 	transition: background-color 1s;
 }
 
-:is(.prev-page, .next-page):hover {
-	background-color: var(--button-color-light);
+@media (hover: hover) {
+	:is(.prev-page, .next-page):hover {
+		background-color: var(--button-color-light);
+	}
 }
 
 .prev-page {
